add projection of 3d points

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,3 +39,6 @@ target_link_libraries(${CMAKE_PROJECT_NAME}_test_compare_ceres_vs_native ${Eigen
 
 add_executable(${CMAKE_PROJECT_NAME}_test_ba_refactor test/test_ba_refactor.cpp ${SRC})
 target_link_libraries(${CMAKE_PROJECT_NAME}_test_ba_refactor ${Eigen3_LIBRARIES} ${OpenCV_LIBS} ${CERES_LIBRARIES})
+
+add_executable(test_projection_of_3d_point test/test_projection_of_3d_point.cc ${SRC})
+target_link_libraries(test_projection_of_3d_point ${Eigen3_LIBRARIES} ${OpenCV_LIBS})
